<resources>
    <string name="app_name">Manga Reader App</string>
    <string name="description">Đề tài kết thúc học phần lập trình Mobile Nhóm 1</string>
    <string name="welcome">Welcome</string>
    <string name="signin">Đăng nhập để tiếp tục</string>
    <string name="user">Gmail</string>
    <string name="pass">Mật khẩu</string>
    <string name="forgotpass">Quên mật khẩu?</string>
    <string name="login">Đăng nhập</string>
    <string name="or">Hoặc</string>
    <string name="signup">Đăng ký</string>
    <string name="register">Đăng ký tài khoản miễn phí</string>
    <string name="gg_signin">Sign In</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_fav">Ưa thích</string>
    <string name="nav_type">Thể loại</string>
    <string name="nav_chancePass">Đổi mật khẩu</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="nav_profile">Thông tin cá nhân</string>
    <string name="nav_account">Tài khoản</string>
    <string name="btn_read">Đọc truyện </string>
    <string name="text_chapter">Chapter</string>
    <string name="text_description">Mô tả</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="fullname">Tên đầy đủ</string>
    <string name="name_rate">Đánh giá</string>
    <string name="txt_rate">Hãy nhận xét !</string>
    <string name="forgot_title">Quên mật khẩu?</string>
    <string name="forgot_des">Điền Gmail của tài khoản</string>
    <string name="back_to_login">Quay lại đăng nhập</string>
    <string name="send">Xác nhận</string>
    <string name="nhanxet">Nhận xét</string>
    <string name="cmt">Bình luận</string>
</resources>