<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.LoginAct"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/logo2"
            android:transitionName="logo_trans"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/forgot_title"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:transitionName="text_trans"/>
        <TextView
            android:id="@+id/txt_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/forgot_des"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:transitionName="text_trans"/>

        <LinearLayout
            android:id="@+id/linear_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gmail_forgot"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/antic"
                    android:hint="@string/user" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_back_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/back_to_login"
                android:layout_gravity="end"
                android:elevation="0dp"
                android:fontFamily="@font/antic"
                android:textColor="@color/teal_700"
                android:layout_marginBottom="5dp"
                android:textAllCaps="false"
                android:textStyle="italic"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_btn_signup"
                android:textColor="@color/white"
                android:fontFamily="@font/antic"
                android:textAllCaps="false"
                android:textSize="20sp"/>

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progres"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/toolbar"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>