<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.GoogleLoginAct"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/nentrang"
            android:transitionName="logo_trans"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:src="@drawable/logo_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_gg_signin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_google_login"
            android:text="@string/gg_signin"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progres"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/toolbar"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>