<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.MangaDetailsAct">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="290dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_banner_manga"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

            <androidx.cardview.widget.CardView

                android:layout_width="155dp"
                android:layout_height="220dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="35dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/img_poster_manga"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="190dp"
                android:layout_marginTop="50dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_Name"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#A8000000">

                    <TextView
                        android:id="@+id/tv_name_manga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="@font/poppins_bold"
                        android:lineSpacingExtra="-10dp"
                        android:textColor="@color/white"
                        android:textFontWeight="10"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/cardView_Name"
                    app:cardBackgroundColor="#A8000000">
                    <TextView
                        android:id="@+id/txt_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/white"
                        android:textSize="13dp"
                        android:textStyle="normal" />

                </androidx.cardview.widget.CardView>


            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="190dp"
                android:layout_marginTop="180dp"
                tools:listitem="@layout/item_tag"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </androidx.recyclerview.widget.RecyclerView>


            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_back" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_read_manga"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="302dp"
        android:background="@drawable/custom_btn_read_manga"
        android:text="@string/btn_read"
        android:textColor="@color/white"
        android:textSize="12dp" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="348dp"
        android:fontFamily="@font/poppins"
        android:text="@string/text_description"
        android:textColor="@color/btn_read_manga"
        android:textSize="15dp"
        android:textStyle="normal" />

    <View
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="358dp"
        android:background="@color/color_line" />


    <ImageView
        android:id="@+id/btn_favorite"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="310dp"
        android:src="@drawable/ic_favorite" />


    <ImageView
        android:id="@+id/btn_share"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="310dp"
        android:src="@drawable/ic_share" />

    <androidx.cardview.widget.CardView

        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="380dp"
        app:cardBackgroundColor="#E0D8D8"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins"
            android:textSize="10dp"
            android:textStyle="normal" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="466dp"
        android:fontFamily="@font/poppins"
        android:text="@string/text_chapter"
        android:textColor="@color/btn_read_manga"
        android:textSize="15dp"
        android:textStyle="normal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_chapter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="490dp"
        tools:listitem="@layout/item_chapter">

    </androidx.recyclerview.widget.RecyclerView>


</RelativeLayout>